--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "get-random-values": "^1.2.0",
+    "ecurve": "^1.0.6",
+    "bigi": "^1.1.0",
+    "bs58": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
